@startuml
package AcademicCourse{
  class AcademicCourse
}
package Activity{
    package AfterSchool{}
    package Custody{}

    package Camps{
        class Camps
        class CampsLevel
        Camps *-- "1..N" CampsLevel: ""
        Camps o-- AcademicCourse
    }

    abstract class PricePerLevel{
        Levels: String
        PriceForMember: float
        PriceForNoMember: float
    }

    CampsLevel <|-- PricePerLevel
    Custody <|-- PricePerLevel
    AfterSchool <|-- PricePerLevel
}

@enduml
